style: 全站统一深色主题配色方案
🎨 设计优化：
- 将所有页面统一为深色主题风格
- 参考Voice页面的配色方案
- 提升全站视觉一致性和专业度

📝 配色方案：
- 卡片背景：#0e1424（深蓝黑色）
- 边框颜色：#2a3a57（深蓝灰色）
- 标题文字：#e5e7eb（浅灰白色）
- 正文文字：#aab4d4（柔和蓝灰色）
- 链接颜色：#667eea（品牌紫色）

✨ 更新页面：

1. index.html (首页)
   - ✅ 工作流程卡片改为深色
   - ✅ FAQ卡片改为深色
   - ✅ 特性展示卡片改为深色
   - ✅ 统一文字颜色

2. services.html (服务页)
   - ✅ 服务内容区域改为深色
   - ✅ 相关内容卡片改为深色
   - ✅ 统一文字颜色

3. tutorial.html (教程页)
   - ✅ 教程卡片改为深色
   - ✅ 步骤说明区域改为深色
   - ✅ 统一文字颜色

4. faq.html (常见问题页)
   - ✅ FAQ问答卡片改为深色
   - ✅ 分类区域改为深色
   - ✅ 统一文字颜色

5. prompt-engineering.html (提示词工程页)
   - ✅ 技巧卡片改为深色
   - ✅ 示例区域改为深色
   - ✅ 统一文字颜色

6. ai-guide.html (AI指南页)
   - ✅ 指南内容卡片改为深色
   - ✅ 技巧展示区域改为深色
   - ✅ 统一文字颜色

7. privacy.html (隐私政策页)
   - ✅ 内容区域改为深色
   - ✅ 统一文字颜色

8. terms.html (服务条款页)
   - ✅ 内容区域改为深色
   - ✅ 统一文字颜色

🎯 效果：
- ✅ 全站配色完全统一
- ✅ 深色主题更显专业和现代
- ✅ 减少视觉疲劳，提升用户体验
- ✅ 品牌形象更加一致
- ✅ 所有页面风格协调统一

💡 设计理念：
- 深色背景突出内容层次
- 柔和的文字颜色保护眼睛
- 品牌色链接醒目但不刺眼
- 边框增强卡片立体感
- 全站视觉体验一致性

--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -772,11 +772,11 @@
             style="
               margin-top: 50px;
               padding: 30px;
-              background: var(--color-surface-muted, #f8f9fa);
+              background: #0e1424; border: 1px solid #2a3a57;
               border-radius: 12px;
             "
           >
-            <h2 style="color: #333; margin-bottom: 25px; text-align: center">📚 深入学习推荐</h2>
+            <h2 style="color: #e5e7eb; margin-bottom: 25px; text-align: center">📚 深入学习推荐</h2>
             <div
               class="related-grid"
               style="
@@ -788,7 +788,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -806,7 +806,7 @@
                     >🎯 提示词工程专业教程</a
                   >
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   掌握高级提示词技巧，学会权重控制、风格融合和负面提示词策略
                 </p>
                 <a
@@ -824,7 +824,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -842,7 +842,7 @@
                     >📖 AISTONE使用教程</a
                   >
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   从入门到精通，全面掌握AISTONE平台的所有功能和特性
                 </p>
                 <a
@@ -860,7 +860,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -876,7 +876,7 @@
                 >
                   <a href="/" style="text-decoration: none; color: inherit">🚀 立即开始创作</a>
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   学习了理论知识？现在就用AISTONE开始你的第一个AI艺术创作
                 </p>
                 <a
@@ -894,7 +894,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -912,7 +912,7 @@
                     >❓ 常见问题解答</a
                   >
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   遇到技术问题？查看用户最常问的问题和详细解决方案
                 </p>
                 <a
@@ -1007,7 +1007,7 @@
 
       /* 指南内容区域 */
       .guide-content {
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 40px;
         border-radius: 12px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
@@ -1023,7 +1023,7 @@
       }
 
       .guide-header h1 {
-        color: #333;
+        color: #e5e7eb;
         font-size: 3em;
         margin-bottom: 15px;
         font-weight: 700;
@@ -1056,7 +1056,7 @@
 
       /* 目录样式 */
       .table-of-contents {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 25px;
         border-radius: 8px;
         margin-bottom: 40px;
@@ -1192,7 +1192,7 @@
       }
 
       .model-card {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         margin: 15px 0;
@@ -1218,7 +1218,7 @@
         width: 100%;
         border-collapse: collapse;
         margin: 20px 0;
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
         overflow: hidden;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -1239,7 +1239,7 @@
       }
 
       .comparison-table tr:hover {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
       }
 
       /* 提示词结构样式 */
@@ -1248,7 +1248,7 @@
       }
 
       .structure-element {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 8px;
         margin: 15px 0;
@@ -1302,7 +1302,7 @@
       }
 
       .prompt-example {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         margin: 15px 0;
@@ -1310,7 +1310,7 @@
       }
 
       .prompt-text {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 5px;
         font-family: "Monaco", "Consolas", monospace;
@@ -1321,7 +1321,7 @@
       }
 
       .prompt-analysis {
-        color: #666;
+        color: #aab4d4;
         font-size: 0.9em;
         font-style: italic;
       }
@@ -1335,7 +1335,7 @@
       }
 
       .parameter-section {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         border-left: 4px solid #17a2b8;
@@ -1355,7 +1355,7 @@
       }
 
       .tip-category {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         padding: 20px;
         border-radius: 8px;
@@ -1380,7 +1380,7 @@
       }
 
       .problem-solution {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 8px;
         margin: 20px 0;
@@ -1453,7 +1453,7 @@
       }
 
       .technique {
-        background: #fff;
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         padding: 25px;
         border-radius: 10px;
@@ -1495,7 +1495,7 @@
       }
 
       .application h4 {
-        color: #333;
+        color: #e5e7eb;
         margin-bottom: 15px;
         font-size: 1.1em;
       }
@@ -1506,7 +1506,7 @@
       }
 
       .trend-item {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         margin: 15px 0;
@@ -1974,7 +1974,7 @@
       }
 
       .nav-menu a {
-        color: #333;
+        color: #e5e7eb;
         text-decoration: none;
         font-weight: 500;
         transition: color 0.3s;
@@ -1993,8 +1993,8 @@
         padding: 8px 12px;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 6px;
-        background: var(--color-surface-on-light-white, #fff);
-        color: #333;
+        background: #0e1424; border: 1px solid #2a3a57;
+        color: #e5e7eb;
         font-size: 14px;
         cursor: pointer;
         transition: border-color 0.3s;
