--- a/frontend/index.html
+++ b/frontend/index.html
@@ -341,7 +341,7 @@
             <div
               class="model-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -383,7 +383,7 @@
             <div
               class="model-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -425,7 +425,7 @@
             <div
               class="model-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -467,7 +467,7 @@
             <div
               class="model-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -580,25 +580,25 @@
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
               <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label">Step 1</span>
               <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title">Clarify requirements</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep1Desc">Log the target channel, aspect ratio, brand keywords, and references. Store them in the prompt notes so teammates stay aligned.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep1Desc">Log the target channel, aspect ratio, brand keywords, and references. Store them in the prompt notes so teammates stay aligned.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
               <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label">Step 2</span>
               <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title">Pick model and parameters</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep2Desc">Choose FLUX for polish, Turbo for speed, or Kontext for image-to-image. Set ratio, variation count, and negative prompts to match the channel.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep2Desc">Choose FLUX for polish, Turbo for speed, or Kontext for image-to-image. Set ratio, variation count, and negative prompts to match the channel.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
               <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label">Step 3</span>
               <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title">Iterate prompts</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep3Desc">Generate a draft, inspect composition and lighting, then tweak keywords. Compare prompt history to lock in the strongest version.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep3Desc">Generate a draft, inspect composition and lighting, then tweak keywords. Compare prompt history to lock in the strongest version.</p>
             </div>
 
             <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
               <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label">Step 4</span>
               <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title">Export and add voice</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeWorkflowStep4Desc">Upscale the winning frame and export PNG or JPG. Switch to the voice page to create narration with the same script.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep4Desc">Upscale the winning frame and export PNG or JPG. Switch to the voice page to create narration with the same script.</p>
             </div>
           </div>
         </section>
@@ -616,17 +616,17 @@
             class="faq-grid"
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px"
           >
-            <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
+            <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
               <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1">Is AISTONE completely free?</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA1">Core features, including HD export and voice synthesis, are free for all visitors. Enterprise deployments, brand customisation, and high-volume API usage are billed separately.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA1">Core features, including HD export and voice synthesis, are free for all visitors. Enterprise deployments, brand customisation, and high-volume API usage are billed separately.</p>
             </div>
-            <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
+            <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
               <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2">Can I use generated assets commercially?</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA2">Yes. You own the assets for campaigns and ads. Please follow platform disclosure rules for AI-generated media.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA2">Yes. You own the assets for campaigns and ads. Please follow platform disclosure rules for AI-generated media.</p>
             </div>
-            <div class="faq-item" style="background: #f8f9fa; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
+            <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
               <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3">How do I improve prompt accuracy?</h3>
-              <p style="color: #475569; line-height: 1.6" data-i18n="homeQuickFaqA3">Combine subject, lighting, lens, and style keywords while using negative prompts to remove unwanted elements. The case study above breaks each part down.</p>
+              <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA3">Combine subject, lighting, lens, and style keywords while using negative prompts to remove unwanted elements. The case study above breaks each part down.</p>
             </div>
           </div>
         </section>
@@ -662,7 +662,7 @@
               href="image-generator.html"
               class="service-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 2px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 30px;
@@ -776,7 +776,7 @@
               href="voice.html"
               class="service-card"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 2px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 30px;
@@ -916,7 +916,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -946,7 +946,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -976,7 +976,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -1006,7 +1006,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -1036,7 +1036,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -1066,7 +1066,7 @@
             <div
               class="audience-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 20px;
@@ -1124,7 +1124,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
@@ -1168,7 +1168,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
@@ -1212,7 +1212,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
@@ -1256,7 +1256,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
@@ -1300,7 +1300,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
@@ -1344,7 +1344,7 @@
             <div
               class="feature-item"
               style="
-                background: var(--color-surface-light, #f8f9fa);
+                background: #0e1424; border: 1px solid #2a3a57;
                 border: 1px solid var(--color-border-light, #e9ecef);
                 border-radius: var(--radius-lg, 12px);
                 padding: 25px;
