--- a/frontend/prompt-engineering.html
+++ b/frontend/prompt-engineering.html
@@ -1080,7 +1080,7 @@
               border-radius: 12px;
             "
           >
-            <h2 style="color: #333; margin-bottom: 25px; text-align: center">🚀 继续提升技能</h2>
+            <h2 style="color: #e5e7eb; margin-bottom: 25px; text-align: center">🚀 继续提升技能</h2>
             <div
               class="related-grid"
               style="
@@ -1092,7 +1092,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -1110,7 +1110,7 @@
                     >🧠 AI图像生成完整指南</a
                   >
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   深入了解AI技术原理，掌握FLUX、Stable Diffusion等模型的使用技巧
                 </p>
                 <a
@@ -1128,7 +1128,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -1146,7 +1146,7 @@
                     >📖 AISTONE使用教程</a
                   >
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   学会使用AISTONE平台的所有功能，从基础操作到高级设置
                 </p>
                 <a
@@ -1164,7 +1164,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -1180,7 +1180,7 @@
                 >
                   <a href="/" style="text-decoration: none; color: inherit">🎨 开始实战练习</a>
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   运用学到的提示词技巧，立即开始你的AI艺术创作之旅
                 </p>
                 <a
@@ -1198,7 +1198,7 @@
               <div
                 class="related-card"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 20px;
                   border-radius: 8px;
                   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -1214,7 +1214,7 @@
                 >
                   <a href="faq.html" style="text-decoration: none; color: inherit">💬 技术交流</a>
                 </h3>
-                <p style="margin: 0 0 15px 0; font-size: 14px; color: #666; line-height: 1.5">
+                <p style="margin: 0 0 15px 0; font-size: 14px; color: #aab4d4; line-height: 1.5">
                   遇到问题或想要交流经验？查看常见问题或联系我们
                 </p>
                 <a
@@ -1309,7 +1309,7 @@
 
       /* 指南主体 */
       .prompt-guide {
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
@@ -1331,7 +1331,7 @@
         left: 0;
         right: 0;
         height: 20px;
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 20px 20px 0 0;
       }
 
@@ -1387,7 +1387,7 @@
       }
 
       .overview-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 25px;
         border-radius: 12px;
         text-align: center;
@@ -1488,7 +1488,7 @@
       }
 
       .process-step {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 25px;
         border-radius: 10px;
         border-left: 5px solid #28a745;
@@ -1508,7 +1508,7 @@
 
       .process-step p {
         margin: 0;
-        color: #666;
+        color: #aab4d4;
       }
 
       /* 结构图 */
@@ -1520,7 +1520,7 @@
       }
 
       .structure-component {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 2px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         padding: 20px;
@@ -1580,7 +1580,7 @@
       }
 
       .rule-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         padding: 25px;
@@ -1654,7 +1654,7 @@
       }
 
       .syntax-item {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 25px;
         border-radius: 10px;
         margin: 20px 0;
@@ -1676,7 +1676,7 @@
         align-items: center;
         gap: 15px;
         padding: 10px;
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 6px;
         border: 1px solid var(--color-border-muted, #e9ecef);
       }
@@ -1692,7 +1692,7 @@
       }
 
       .syntax-example span {
-        color: #666;
+        color: #aab4d4;
         font-size: 0.9em;
       }
 
@@ -1702,7 +1702,7 @@
       }
 
       .case-study {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 12px;
         margin: 25px 0;
@@ -1735,13 +1735,13 @@
 
       .before h5,
       .after h5 {
-        color: #333;
+        color: #e5e7eb;
         margin-bottom: 12px;
         font-size: 1.1em;
       }
 
       .prompt-text {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 6px;
         font-family: "Monaco", "Consolas", monospace;
@@ -1775,7 +1775,7 @@
       }
 
       .practice-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         padding: 25px;
         border-radius: 10px;
@@ -1860,7 +1860,7 @@
       }
 
       .category {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         padding: 25px;
@@ -1883,7 +1883,7 @@
       }
 
       .neg-tag {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid #dc3545;
         color: #dc3545;
         padding: 6px 12px;
@@ -1905,7 +1905,7 @@
       }
 
       .template-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         margin: 20px 0;
@@ -1938,7 +1938,7 @@
       }
 
       .template-desc {
-        color: #666;
+        color: #aab4d4;
         font-size: 0.9em;
         margin: 0;
         font-style: italic;
@@ -1981,7 +1981,7 @@
       }
 
       .combo-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 12px;
         margin: 25px 0;
@@ -2006,7 +2006,7 @@
       }
 
       .combo-prompt {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 6px;
         font-family: "Monaco", "Consolas", monospace;
@@ -2030,7 +2030,7 @@
       }
 
       .technique-category {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 10px;
         padding: 25px;
         margin: 20px 0;
@@ -2049,14 +2049,14 @@
       }
 
       .technique-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 6px;
         border: 1px solid var(--color-border-muted, #e9ecef);
       }
 
       .technique-item strong {
-        color: #333;
+        color: #e5e7eb;
         display: block;
         margin-bottom: 8px;
       }
@@ -2064,8 +2064,8 @@
       .technique-item span {
         font-family: "Monaco", "Consolas", monospace;
         font-size: 0.85em;
-        color: #666;
-        background: var(--color-surface-muted, #f8f9fa);
+        color: #aab4d4;
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 8px;
         border-radius: 4px;
         display: block;
@@ -2077,7 +2077,7 @@
       }
 
       .case-study-detailed {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 12px;
         margin: 30px 0;
@@ -2119,7 +2119,7 @@
       }
 
       .evolution-step {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
         padding: 20px;
         margin: 15px 0;
@@ -2127,7 +2127,7 @@
       }
 
       .evolution-step h6 {
-        color: #333;
+        color: #e5e7eb;
         margin-bottom: 10px;
         font-size: 1em;
       }
@@ -2161,7 +2161,7 @@
       }
 
       .template-category {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         margin: 25px 0;
@@ -2182,7 +2182,7 @@
       }
 
       .template {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 6px;
         margin: 12px 0;
@@ -2190,7 +2190,7 @@
       }
 
       .template h5 {
-        color: #333;
+        color: #e5e7eb;
         margin-bottom: 8px;
         font-size: 1em;
       }
@@ -2199,7 +2199,7 @@
         font-family: "Monaco", "Consolas", monospace;
         font-size: 0.8em;
         color: #495057;
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 10px;
         border-radius: 4px;
         border: 1px solid var(--color-border-muted, #e9ecef);
@@ -2211,7 +2211,7 @@
       }
 
       .testing-methodology {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         padding: 30px;
@@ -2229,7 +2229,7 @@
       }
 
       .flow-step {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
         padding: 25px;
         margin: 20px 0;
@@ -2262,7 +2262,7 @@
       }
 
       .test-variant {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 12px;
         border-radius: 6px;
         border: 1px solid var(--color-border-muted, #e9ecef);
@@ -2303,7 +2303,7 @@
       }
 
       .module-card {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 8px;
         padding: 20px;
@@ -2311,7 +2311,7 @@
       }
 
       .module-card h5 {
-        color: #333;
+        color: #e5e7eb;
         margin-bottom: 12px;
         font-size: 1.1em;
         text-align: center;
@@ -2339,7 +2339,7 @@
       }
 
       .modular-assembly {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 25px;
         border-radius: 10px;
         margin-top: 25px;
@@ -2389,7 +2389,7 @@
       .equals {
         font-size: 1.2em;
         font-weight: bold;
-        color: #666;
+        color: #aab4d4;
       }
 
       .formula-result {
@@ -2401,7 +2401,7 @@
       }
 
       .assembly-result {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 15px;
         border-radius: 8px;
         border: 1px solid var(--color-border-muted, #e9ecef);
@@ -2409,7 +2409,7 @@
       }
 
       .assembly-result strong {
-        color: #333;
+        color: #e5e7eb;
         display: block;
         margin-bottom: 8px;
       }
@@ -2427,7 +2427,7 @@
       }
 
       .tip-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 10px;
         padding: 25px;
@@ -2445,7 +2445,7 @@
       }
 
       .preset {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 10px;
         border-radius: 6px;
         font-family: "Monaco", "Consolas", monospace;
@@ -3058,7 +3058,7 @@
       }
 
       .nav-menu a {
-        color: #333;
+        color: #e5e7eb;
         text-decoration: none;
         font-weight: 500;
         transition: color 0.3s;
@@ -3077,8 +3077,8 @@
         padding: 8px 12px;
         border: 1px solid var(--color-border-muted, #e9ecef);
         border-radius: 6px;
-        background: var(--color-surface-on-light-white, #fff);
-        color: #333;
+        background: #0e1424; border: 1px solid #2a3a57;
+        color: #e5e7eb;
         font-size: 14px;
         cursor: pointer;
         transition: border-color 0.3s;
