--- a/frontend/services.html
+++ b/frontend/services.html
@@ -66,11 +66,11 @@
           style="
             margin-top: 40px;
             padding: 20px;
-            background: var(--color-surface-muted, #f8f9fa);
+            background: #0e1424; border: 1px solid #2a3a57;
             border-radius: 8px;
           "
         >
-          <h2 style="color: #333; margin-bottom: 20px" data-i18n="relatedContentTitle">
+          <h2 style="color: #e5e7eb; margin-bottom: 20px" data-i18n="relatedContentTitle">
             🚀 立即体验
           </h2>
           <div
@@ -84,7 +84,7 @@
             <div
               class="related-item"
               style="
-                background: var(--color-surface-on-light-white, #fff);
+                background: #0e1424; border: 1px solid #2a3a57;
                 padding: 15px;
                 border-radius: 6px;
                 border: 1px solid var(--color-border-muted, #e9ecef);
@@ -104,14 +104,14 @@
                   >🎨 AI图片生成</a
                 >
               </h3>
-              <p style="margin: 0; font-size: 14px; color: #666" data-i18n="relatedImageGenDesc">
+              <p style="margin: 0; font-size: 14px; color: #aab4d4" data-i18n="relatedImageGenDesc">
                 体验我们的核心服务，将想法转化为精美图像
               </p>
             </div>
             <div
               class="related-item"
               style="
-                background: var(--color-surface-on-light-white, #fff);
+                background: #0e1424; border: 1px solid #2a3a57;
                 padding: 15px;
                 border-radius: 6px;
                 border: 1px solid var(--color-border-muted, #e9ecef);
@@ -131,14 +131,14 @@
                   >🎵 AI语音合成</a
                 >
               </h3>
-              <p style="margin: 0; font-size: 14px; color: #666" data-i18n="relatedVoiceGenDesc">
+              <p style="margin: 0; font-size: 14px; color: #aab4d4" data-i18n="relatedVoiceGenDesc">
                 将文字转换为自然语音，完全免费使用
               </p>
             </div>
             <div
               class="related-item"
               style="
-                background: var(--color-surface-on-light-white, #fff);
+                background: #0e1424; border: 1px solid #2a3a57;
                 padding: 15px;
                 border-radius: 6px;
                 border: 1px solid var(--color-border-muted, #e9ecef);
@@ -158,14 +158,14 @@
                   >📖 快速上手</a
                 >
               </h3>
-              <p style="margin: 0; font-size: 14px; color: #666" data-i18n="relatedTutorialDesc">
+              <p style="margin: 0; font-size: 14px; color: #aab4d4" data-i18n="relatedTutorialDesc">
                 学习如何使用各项功能，获得最佳体验
               </p>
             </div>
             <div
               class="related-item"
               style="
-                background: var(--color-surface-on-light-white, #fff);
+                background: #0e1424; border: 1px solid #2a3a57;
                 padding: 15px;
                 border-radius: 6px;
                 border: 1px solid var(--color-border-muted, #e9ecef);
@@ -185,7 +185,7 @@
                   >ℹ️ 了解技术</a
                 >
               </h3>
-              <p style="margin: 0; font-size: 14px; color: #666" data-i18n="relatedAboutDesc">
+              <p style="margin: 0; font-size: 14px; color: #aab4d4" data-i18n="relatedAboutDesc">
                 深入了解我们的AI技术和平台愿景
               </p>
             </div>
