--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -366,11 +366,11 @@
             style="
               margin-top: 40px;
               padding: 20px;
-              background: var(--color-surface-muted, #f8f9fa);
+              background: #0e1424; border: 1px solid #2a3a57;
               border-radius: 8px;
             "
           >
-            <h2 style="color: #333; margin-bottom: 20px">📚 相关内容推荐</h2>
+            <h2 style="color: #e5e7eb; margin-bottom: 20px">📚 相关内容推荐</h2>
             <div
               class="related-links"
               style="
@@ -382,7 +382,7 @@
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -399,14 +399,14 @@
                     >❓ 常见问题解答</a
                   >
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   遇到问题？查看用户最常问的问题和详细解答
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -421,14 +421,14 @@
                 >
                   <a href="/" style="text-decoration: none; color: inherit">🎨 立即生成图片</a>
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   学会了使用方法？现在就开始创作您的第一张AI图片
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -445,14 +445,14 @@
                     >🎵 体验语音合成</a
                   >
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   尝试我们的AI语音合成功能，将文字转换为自然语音
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -469,7 +469,7 @@
                     >ℹ️ 了解AISTONE</a
                   >
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   了解我们的技术原理、发展历程和未来规划
                 </p>
               </div>
@@ -553,7 +553,7 @@
       }
 
       .tutorial-content {
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -598,14 +598,14 @@
         text-align: center;
         margin-bottom: 40px;
         padding: 20px;
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
       }
 
       .tutorial-step {
         margin-bottom: 30px;
         padding: 20px;
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
         border-left: 4px solid var(--color-accent-blue, #4a90e2);
       }
@@ -661,7 +661,7 @@
 
       /* 相关内容推荐样式 */
       .related-content {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 40px 0;
         margin-top: 30px;
         border-top: 1px solid var(--color-border-muted, #e9ecef);
@@ -683,7 +683,7 @@
       }
 
       .related-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
