--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -499,11 +499,11 @@
             style="
               margin-top: 40px;
               padding: 20px;
-              background: var(--color-surface-muted, #f8f9fa);
+              background: #0e1424; border: 1px solid #2a3a57;
               border-radius: 8px;
             "
           >
-            <h2 style="color: #333; margin-bottom: 20px">📖 延伸阅读</h2>
+            <h2 style="color: #e5e7eb; margin-bottom: 20px">📖 延伸阅读</h2>
             <div
               class="related-links"
               style="
@@ -515,7 +515,7 @@
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -532,14 +532,14 @@
                     >📘 完整使用教程</a
                   >
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   详细的分步指南，教您如何使用AISTONE的所有功能
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -554,14 +554,14 @@
                 >
                   <a href="/" style="text-decoration: none; color: inherit">🏠 返回首页</a>
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   回到主页开始使用AI图片和语音生成功能
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -578,14 +578,14 @@
                     >💬 联系我们</a
                   >
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">
                   没有找到答案？直接联系我们的技术支持团队
                 </p>
               </div>
               <div
                 class="related-item"
                 style="
-                  background: var(--color-surface-on-light-white, #fff);
+                  background: #0e1424; border: 1px solid #2a3a57;
                   padding: 15px;
                   border-radius: 6px;
                   border: 1px solid var(--color-border-muted, #e9ecef);
@@ -600,7 +600,7 @@
                 >
                   <a href="user.html" style="text-decoration: none; color: inherit">👤 个人中心</a>
                 </h3>
-                <p style="margin: 0; font-size: 14px; color: #666">管理您的生成历史和个人设置</p>
+                <p style="margin: 0; font-size: 14px; color: #aab4d4">管理您的生成历史和个人设置</p>
               </div>
             </div>
           </section>
@@ -682,7 +682,7 @@
       }
 
       .faq-content {
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -708,7 +708,7 @@
         text-align: center;
         margin-bottom: 40px;
         padding: 20px;
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         border-radius: 8px;
       }
 
@@ -720,7 +720,7 @@
       }
 
       .faq-item h3 {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         margin: 0;
         padding: 15px 20px;
         cursor: pointer;
@@ -737,7 +737,7 @@
 
       .faq-answer {
         padding: 20px;
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         display: block;
       }
 
@@ -783,7 +783,7 @@
 
       /* 相关内容推荐样式 */
       .related-content {
-        background: var(--color-surface-muted, #f8f9fa);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 40px 0;
         margin-top: 30px;
         border-top: 1px solid var(--color-border-muted, #e9ecef);
@@ -805,7 +805,7 @@
       }
 
       .related-item {
-        background: var(--color-surface-on-light-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -835,7 +835,7 @@
 
       .related-item p {
         margin: 0;
-        color: #666;
+        color: #aab4d4;
         font-size: 0.9em;
         line-height: 1.4;
       }
