--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -270,7 +270,7 @@
       }
 
       .terms-content {
-        background: var(--color-surface-white, #fff);
+        background: #0e1424; border: 1px solid #2a3a57;
         padding: 30px;
         border-radius: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
